src/objects/Special_Event_Unit_Booking__c.object
<CustomObject>
    <description>Object to manage bookings to an event Unit (Session or component)</description>
    <fields>
        <fullName>Attended__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Automatically ticked as attended but untick if the delegate did not attend this day (not currently updated)</description>
        <inlineHelpText>Un-check if the delegate did not attend this unit</inlineHelpText>
        <label>Attended</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>lookup to the contact to show the name of the delegate booked on that session.</description>
        <inlineHelpText>lookup to the contact to show the name of the delegate booked on that session.</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>BSC Event Unit Bookings</relationshipLabel>
        <relationshipName>BSC_Event_Unit_Bookings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Delegate_Days__c</fullName>
        <description>unit end date minus unit start date times by 3</description>
        <formula>(Event_Unit__r.Unit_End_Time__c - Event_Unit__r.Unit_Start_Time__c)*3</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>unit end date minus unit start date times by 3</inlineHelpText>
        <label>Delegate Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Event_Booking__c</fullName>
        <description>Lookup to the related event booking</description>
        <inlineHelpText>Lookup to the related event booking</inlineHelpText>
        <label>Event Booking</label>
        <referenceTo>Special_Event_Booking__c</referenceTo>
        <relationshipLabel>BSC Event Unit Bookings</relationshipLabel>
        <relationshipName>BSC_Event_Unit_Bookings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Event_Unit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the related event unit</description>
        <inlineHelpText>Lookup to the related event unit</inlineHelpText>
        <label>Event Unit</label>
        <referenceTo>Special_Event_Unit__c</referenceTo>
        <relationshipLabel>BSC Event Unit Bookings</relationshipLabel>
        <relationshipName>BSC_Event_Unit_Bookings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Migrated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the BSC Event Unit Booking was migrated from the Course Booker database</description>
        <inlineHelpText>Indicates whether the BSC Event Unit Booking was migrated from the Course Booker database</inlineHelpText>
        <label>Migrated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PK_CB_ELEMACT_ID__c</fullName>
        <description>This is a unique key to identify each BSC Event Unit Booking against the source data from Course Booking. It is a concatenation of the BSC Event Booking PK and the BSC Event Unit PK</description>
        <externalId>true</externalId>
        <inlineHelpText>concatenation of the BSC Event Booking PK and the BSC Event Unit PK from Course Booker</inlineHelpText>
        <label>PK CB ELEMACT ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Trainer__c</fullName>
        <formula>Event_Unit__r.BSC_Event_Trainer__r.Trainer__r.Trainer_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Trainer</label>
        <type>Text</type>
    </fields>
    <label>BSC Event Unit Booking</label>
    <nameField>
        <displayFormat>EUB-{0000000}</displayFormat>
        <label>Event Unit Booking Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BSC Event Unit Bookings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Check_BSC_Events_Match</fullName>
        <active>true</active>
        <description>between BSC Event Booking and BSC Event Unit - make sure the BSC Event is the same!</description>
        <errorConditionFormula>Event_Booking__r.Special_Event__r.Id &lt;&gt; Event_Unit__r.Special_Event__r.Id</errorConditionFormula>
        <errorMessage>The BSC Event on the Event Booking and the BSC Event on the Event Unit does not match, please update either the Event Booking or the Event Unit!</errorMessage>
    </validationRules>
</CustomObject>